--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'io.coil-kt:coil-compose:2.2.2'
 
     testImplementation 'junit:junit:4.13.2'
 
